<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Golf Card</string>
    <string name="presentation">\
    ¿Conoce ya <b>My Golf Card</b>? ¿Le han hablado sus compañeros de esta nueva web de golf?\n\n
    Darse da alta en My Golf Card es totalmente gratuito en http://www.mygolfcard.es\n\n
    Con esta aplicación para su móvil podrá apuntar después de cada hoyo su puntuación y si lo desea la de sus compañeros.\n\n
    Al final del partido sólo tendrá que subir los datos del partido a My Golf Card con un simple click y ya tendrá publicada su tarjeta.\n\n
    </string>
    
    <string name="continue_label">Entrar</string>
    <string name="exit_label">Salir</string>
    <string name="about_label">About</string>
    <string name="signup_label">Nuevo Usuario</string>
    
    <string name="new_match_label">Nuevo Partido</string>
    <string name="matches_label">Partidos</string>
    <string name="courses_label">Campos</string>
    
    <string name="menuapp_title">My Golf Card - Menú</string>
    <string name="signup_title">My Golf Card - Nuevo Usuario</string>
    <string name="newmatch_title">My Golf Card - Nuevo Partido</string>
    <string name="card_title">My Golf Card - Tarjeta</string>
    
    <string name="strokes_title">My Golf Card - Golpes</string>
    <string name="matches_title">My Golf Card - Partidos</string>
    <string name="courses_title">My Golf Card - Campos</string>
    <string name="keypad_title">My Golf Card - Golpes</string>
    
	<string name="about_title">About My Golf Card</string>
   	<string name="about_text">\
    ¿Conoce ya <b>My Golf Card</b>? ¿Le han hablado sus compañeros de esta nueva web de golf?\n\n
    Darse da alta en My Golf Card es totalmente gratuito en http://www.mygolfcard.es\n\n
    Con esta aplicación para su móvil podrá apuntar después de cada hoyo su puntuación y si lo desea la de sus compañeros.\n\n
    Al final del partido sólo tendrá que subir los datos del partido a My Golf Card con un simple click y ya tendrá publicada su tarjeta.\n\n
	</string>
	<string name="about_shortcut">a</string>
   
	<string name="settings_label">Settings...</string>
	<string name="settings_title">My Golf Card settings</string>
	<string name="settings_shortcut">s</string>
	
	<string name="synchro_label">Pendientes</string>
	<string name="synchro_title">My Golf Card - Pendientes</string>
	<string name="synchro_shortcut">y</string>
	
	<string name="admin_label">Admin</string>
	<string name="admin_title">My Golf Card - Admin</string>
	<string name="admin_shortcut">i</string>
	
	<string name="menuapp_label">Menú</string>
	<string name="menuapp_shortcut">m</string>
	
	<string name="resume_label">Resumen</string>
	<string name="resume_title">My Golf Card - Resumen</string>
	<string name="resume_shortcut">r</string>
	
	<string name="card_graph_label">Tarjeta</string>
	<string name="card_graph_title">My Golf Card - Tarjeta</string>
	<string name="card_graph_shortcut">g</string>
	
	<string name="stats1_graph_label">Comp. Golpes</string>
	<string name="stats1_graph_title">My Golf Card - Comparativa Golpes</string>
	<string name="stats1_graph_shortcut">s</string>
	
	<string name="stats2_graph_label">Comp. Total</string>
	<string name="stats2_graph_title">My Golf Card - Comparativa Golpes Totales</string>
	<string name="stats2_graph_shortcut">t</string>
	
	<string name="course_details_label">Detalles del Campo</string>
	<string name="course_detail_title">My Golf Card - Detalles del Campo</string>
	<string name="course_details_shortcut">d</string>
	
	<string name="alert_button_default">Aceptar</string>
	<string name="alert_dialog_confirm">Confirmar</string>
	<string name="alert_dialog_cancel">Cancelar</string>
	<string name="alert_dialog_title_delete_matches">Borrar Partidos</string>
	<string name="alert_dialog_delete_matches">¿Desea realmente borrar los partidos pendientes seleccionados?</string>
	<string name="alert_dialog_title_recover_matches">Recuperar Partidos</string>
	<string name="alert_dialog_recover_matches">¿Desea realmente recuperar los partidos seleccionados?</string>
	<string name="alert_dialog_delete_all_matches">¿Desea realmente borrar todos los partidos pendientes seleccionados?</string>
	<string name="alert_dialog_title_upload_matches">Sincronización Partidos</string>
	<string name="alert_dialog_upload_matches">¿Desea realmente sincronizar los partidos pendientes seleccionados?</string>
	<string name="alert_title_no_save">Error guardando datos</string>
	<string name="no_internet">No tiene conexión a Internet.\nSe usarán los últimos datos de acceso disponibles.</string>
	<string name="no_internet_connect">Esta opción sólo está disponible con una conexión a Internet. Conecte su Wi-Fi o 3G y reinicie la aplicación.\nDisculpe las molestias.\n</string>
	<string name="no_save">La aplicación no ha podido guardar los datos correspondientes a su sesión. Por favor, vuelva a introducirlos.\n</string>
	<string name="no_implemented">Opción no operativa en estos momentos.\nDisculpe las molestias.</string>
	<string name="title_remote_connection">Conexión Remota.</string>
	<string name="title_file_connection">Conexión Local.</string>
	<string name="remote_connection">Recuperando datos de servidor remoto de My Golf Card.</string>
	<string name="file_connection">La aplicación no ha encontrado datos de acceso previos a esta sesión. Deberá conectar su Wi-Fi o 3G para validar su acceso.\nDisculpe las molestias.\n</string>
	<string name="no_holes">No hay información disponible sobre los hoyos de este campo.\nDisculpe las molestias.</string>
    
    <!-- <string name="URL_APIS">http://www.mygolfcard.es/api/</string>  -->
    <!-- <string name="URL_APIS">http://localhost:3000/api/</string> -->
    <!-- <string name="URL_APIS">http://192.168.1.5/api/</string> -->
    <string name="URL_APIS">http://192.168.1.30:3000/api/</string>
    <string name="ACTION_AUTH">authentication</string>
    <string name="ACTION_CONNECTION">getconnection</string>
    <string name="ACTION_MATCHES">getmatches</string>
    <string name="ACTION_DELETEMATCH">deletematch</string>
    <string name="ACTION_DELETEMATCHES">deletematches</string>
    <string name="ACTION_COURSES">getcourses</string>
    <string name="ACTION_FRIENDS">getfriends</string>
    <string name="ACTION_MATCH">getmatch</string>
    <string name="ACTION_STROKES">getstrokes</string>
    <string name="ACTION_COURSE">getcourse</string>
    <string name="ACTION_INFO_HOLES">getinfoholes</string>
    <string name="ACTION_UPLOAD">uploadmatch</string>
    <string name="ACTION_SIGNUP">newuser</string>
    
    <string name="DB_NAME">mygolfcard.db</string>
        
    <string name="resume_match">Resumen Partido</string> 
    <string name="main_no_items">No hay elementos para mostrar</string>
    <string name="title_form_validation">Validación Formulario</string>
    <string name="form_validation">Los datos del formulario no son correctos:\n</string>
    
    <string name="synchro_delete">Borrar</string>
    <string name="synchro_delete_all">Borrar Todos</string>
    <string name="synchro_upload">Sincronizar con MyGolfCard</string>
    <string name="synchro_recover">Admin</string>
    
    <string name="admin_delete">Borrar</string>
    <string name="admin_delete_all">Borrar Todos</string>
    <string name="admin_upload">Sincronizar con MyGolfCard</string>
    <string name="admin_recover">Recuperar Partidos</string>
    
    <string name="access_error_title">Error en los datos de acceso</string>
    <string name="access_error">"Los datos introducidos no son correctos.\nSi es un usuario registrado en www.mygolfcard.es, inténtelo de nuevo o recupere en la web su contraseña.\nSi no es usuario registrado, deberá registrarse antes de utilizar esta aplicación.\n"</string>
    
    <string name="remote_call">Realizando llamada al servidor para comprobar sus datos de acceso.</string>
    <string name="disclaim">My Golf Card es un producto independiente y no asociado a nigún campo de golf o club de socios.</string>
</resources>



