<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android! 2e",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband2 for more book information.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- <item 
		android:id="@+id/stats"
    	android:icon="@drawable/menu"
      	android:title="Comparativa Partido" />  -->
    <item 
    	android:id="@+id/card_graph"
    	android:icon="@drawable/card"
      	android:title="@string/card_graph_label"
      	android:alphabeticShortcut="@string/card_graph_shortcut" />
    <item 
    	android:id="@+id/menuapp"
    	android:icon="@drawable/menu"
      	android:title="@string/menuapp_label"
      	android:alphabeticShortcut="@string/menuapp_shortcut" />
</menu>