<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android! 2e",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband2 for more book information.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/synchro_upload"
	   android:title="@string/synchro_upload" 
	   android:icon="@drawable/synchro" />
	   
	<item android:id="@+id/synchro_delete"
      android:title="@string/synchro_delete"
      android:icon="@drawable/delete" />
      
    <item android:id="@+id/synchro_delete_all"
      android:title="@string/synchro_delete_all" 
      android:icon="@drawable/delete_all" />
	   
</menu>