<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/background"
	android:padding="15dip">
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_gravity="center"
		android:stretchColumns="0,1">
		<TableRow>
			<TextView android:text="@string/presentation"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_gravity="center" android:textSize="12.5sp"
				android:autoLink="all" android:layout_span="2" />
		</TableRow>
		<TableRow>
			<TextView android:text="Usuario :  " android:layout_gravity="right"
				android:layout_width="fill_parent" android:paddingTop="15dip" />
			<EditText android:id="@+id/login_user"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_gravity="left" android:width="130sp" android:text="eladioruiz"
				android:singleLine="true" />
		</TableRow>
		<TableRow>
			<TextView android:text="Contraseña :  "
				android:layout_gravity="right" android:layout_width="fill_parent"
				android:paddingTop="15dip" />
			<EditText android:id="@+id/login_password"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:width="130sp" android:layout_gravity="left"
				android:password="true" android:text="Oidale27"
				android:singleLine="true" />
		</TableRow>
<!-- 	<TableRow
			android:gravity="center">
			<Button android:id="@+id/continue_button"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:text="@string/continue_label" />
			<Button android:id="@+id/exit_button" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:text="@string/exit_label" />
		</TableRow>  -->
		<TableRow
			android:gravity="center">
			<Button android:id="@+id/continue_button"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:text="@string/continue_label" />
			<Button android:id="@+id/signup_button" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:text="@string/signup_label" />
		</TableRow>		
	</TableLayout>
</ScrollView>
